client/main.css
body {
	background: white;
	color: black;
  font-family: 'Rubik', sans-serif;
}
h2 {
  text-align: center;
  color: #0b5fa8;
  
}

dt {
  text-align: right;
}

.navbar {
  margin-bottom: 10px;
}

.navbar-default {
  -webkit-transition: all .35s;
  -moz-transition: all .35s;
  transition: all .35s;

}

.navbar-brand {
  padding: 0px 15px;
}

#night-label {
	margin-bottom: 5px;
}

.alert {
  margin-bottom: 0px;
}
.main-container {
	width: 90%;
	margin-left: 5%;
  margin-top: 40px;
}

.md-container {
  width: 55%;
  margin-left: auto;
  margin-right: auto;
  max-width: 500px;
  margin-top: 80px;
  padding: 70px 50px 100px 50px;
}

#login-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
}

.center-container {
  text-align: center;
}

.input-group-btn .btn {
    margin-top: 25px;
}

li .switch {
  margin-top: 8px;
  margin-bottom: 0;
}

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {display:none;}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.tabBlock {
  background-color:#57574f;
  border:solid 0px #FFA54F;
  border-radius:5px; -moz-border-radius:5px; -webkit-border-radius:5px;
  width:100%;
  overflow:hidden;
  display:block;
}
.clock {
  vertical-align:middle;
  font-family:Orbitron;
  font-size:40px;
  font-weight:normal;
  color:#FFF;
  padding:0 10px;
}
#date {
  font-size: 13px;
}

.clocklg {
  vertical-align:middle; 
  font-family:Orbitron;
  font-size:20px;
  font-weight:normal;
  color:#FFF;
}

.clean-table, .workshops-table {
  margin-top: 5px;
  margin-bottom: 10px;
  overflow-x:scroll;
  margin-right: -10px;
}

.clean-table th, .workshops-table th{
  text-align: center;
  min-width: 130px;
  border: 1px solid black;
}

.clean-table table, .workshops-table table {
  margin-left: auto;
  margin-right: auto;
  margin-top: 5px;
  border: 1px solid black;
}

.clean-table td, .workshops-table td {
  font-size: 14px;
  padding: 10px 5px;
  min-width: 120px;
  text-align: center;
  border: 1px solid black;
}

.clean-table tr:hover {
  background-color: #e0e0e0;
  color: black;
  -webkit-transition: background-color 0.25s; /* Safari */
  transition: background-color 0.25s;
}
.workshops-table td:hover {
  background-color: #dff0d8;
  color: black;
  -webkit-transition: background-color 0.25s; /* Safari */
  transition: background-color 0.25s;
} 

.clean-table tr:active {
  background-color: #999;
}

.cleaned:hover {
  background-color: #f0ad4e;
  -webkit-transition: background-color 0.25s; /* Safari */
  transition: background-color 0.25s;
}

.clean-table tr:nth-child(even),.workshops-table tr:nth-child(even) {
  background-color: #f2f2f2;
  color: black;
}

.clean-table tr:nth-child(even):hover,.workshops-table tr:nth-child(even):hover {
  background-color: #e0e0e0;
  color: black;
  -webkit-transition: background-color 0.25s; /* Safari */
  transition: background-color 0.25s;
}

img{
  max-width:300px;
}

.centered-img {
  text-align: center;
}

a{
  text-decoration: none;
}

a:hover {
    text-decoration: none;
}
a:focus {
    text-decoration: none;
}

table {
  font-family: 'Rubik', sans-serif;
}

dl {
  margin-bottom: 0px;
}
.checkbox {
  margin-top: 30px;
}

.cleaned {
  background-color: #dff0d8;
  color: black;
}

.msg-row {
  padding-top: 15px;
  position: fixed;
  right: 5px;
  z-index: 2;
  top: 50px;
  
}

@media (max-width: 1028px) {
  .main-container {
    margin-top: 84px;
  }
  .msg-row {
    top: 100px;
  }
}

@media (max-width: 833px) {
  .main-container {
    margin-top: 84px;
  }
}

@media (max-width: 768px) {
  .navbar-right {
    margin-right: 0px;
  }
  .msg-row {
    top: 50px;
    width: 75%;
  }
}

@media only screen and (max-width: 767px) {
  dt {
    text-align: center;
  }
  dd {
    text-align: center;
  }
  .main-container {
    margin-top: 40px;
  }
}

@media only screen and (max-width: 725px) {
  .md-container {
    width: 100%;
    margin-top: 5px;
  }
  img {
    max-width: 200px;
  }
}

@media only screen and (max-width: 494px) {
  dt {
    text-align: center;
  }
  dd {
    text-align: center;
  }
  .main-container {
    margin-top: 40px;
  }
  .md-container {
    padding: 0;
  }
}

